--- a/project/index.html
+++ b/project/index.html
@@ -88,7 +88,7 @@
 
     <div class="content">
         <h3>Wpcode</h3>
-        <p>somos a wpcpde, há três anos entegando o melhor da tecnologia da informação.</p>
+        <p>somos a wpcode, há três anos entegando o melhor da tecnologia da informação.</p>
         <p>Codando seu futuro!</p>
         <a href="https://pay.kiwify.com.br/9KBiNGs" class="btn">Torne-se High Level</a>
     </div>
